handling of continuous TCP data sending and adjusted a suitable delays and flow, fetch data from sensors and send to TCP in packets of 10, and then it tests GPS-TX and again GPS data using AT Command AT+GPSRD

--- a/esp32scooter/docs/latex/esp32scooter_8ino.tex
+++ b/esp32scooter/docs/latex/esp32scooter_8ino.tex
@@ -1,5 +1,5 @@
-\hypertarget{esp32scooter_8ino}{}\section{C\+:/\+Users/\+Sajjad/\+Desktop/backup/esp32scooter/esp32scooter.ino File Reference}
-\label{esp32scooter_8ino}\index{C:/Users/Sajjad/Desktop/backup/esp32scooter/esp32scooter.ino@{C:/Users/Sajjad/Desktop/backup/esp32scooter/esp32scooter.ino}}
+\hypertarget{esp32scooter_8ino}{}\section{H\+:/github/scooter/esp32scooter/esp32scooter.ino File Reference}
+\label{esp32scooter_8ino}\index{H:/github/scooter/esp32scooter/esp32scooter.ino@{H:/github/scooter/esp32scooter/esp32scooter.ino}}
 
 
 This is the Arduino .ino file.  
@@ -41,7 +41,7 @@ void
 \end{DoxyReturn}
 
 
-Definition at line 66 of file esp32scooter.\+ino.
+Definition at line 59 of file esp32scooter.\+ino.
 
 \mbox{\Hypertarget{esp32scooter_8ino_a4fc01d736fe50cf5b977f755b675f11d}\label{esp32scooter_8ino_a4fc01d736fe50cf5b977f755b675f11d}} 
 \index{esp32scooter.ino@{esp32scooter.ino}!setup@{setup}}
