--- a/esp32scooter/docs/latex/index.tex
+++ b/esp32scooter/docs/latex/index.tex
@@ -139,7 +139,7 @@ There are following bugs and discrepensies that needs to be take care off.
 
 \begin{DoxyItemize}
 \item Sajjad Hussain,
-\item Tobias,
+\item Tobias Röddiger,
 \end{DoxyItemize}
 
 The team at T\+E\+CO (www.\+teco.\+edu) and at Chair for Pervasive Computing Systems (\href{https://pcs.tm.kit.edu}{\texttt{ https\+://pcs.\+tm.\+kit.\+edu}}).\hypertarget{index_license}{}\section{License}\label{index_license}
