--- a/esp32scooter/docs/latex/timer_8h.tex
+++ b/esp32scooter/docs/latex/timer_8h.tex
@@ -1,5 +1,5 @@
-\hypertarget{timer_8h}{}\section{C\+:/\+Users/\+Sajjad/\+Desktop/backup/esp32scooter/timer.h File Reference}
-\label{timer_8h}\index{C:/Users/Sajjad/Desktop/backup/esp32scooter/timer.h@{C:/Users/Sajjad/Desktop/backup/esp32scooter/timer.h}}
+\hypertarget{timer_8h}{}\section{H\+:/github/scooter/esp32scooter/timer.h File Reference}
+\label{timer_8h}\index{H:/github/scooter/esp32scooter/timer.h@{H:/github/scooter/esp32scooter/timer.h}}
 
 
 variable and function definitions for timings  
@@ -9,7 +9,7 @@ variable and function definitions for timings
 \begin{DoxyCompactItemize}
 \item 
 void I\+R\+A\+M\+\_\+\+A\+T\+TR \mbox{\hyperlink{timer_8h_aeb36d30620b2d08c6d267015771abf65}{reset\+Module}} ()
-\begin{DoxyCompactList}\small\item\em I\+SR functions called for Reset E\+S\+P32. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Error Indicating for AT Command Respnse. \end{DoxyCompactList}\item 
 void I\+R\+A\+M\+\_\+\+A\+T\+TR \mbox{\hyperlink{timer_8h_ada06ab1c4bbd307a9fea75726c8894f1}{on\+Timer}} ()
 \begin{DoxyCompactList}\small\item\em I\+SR functions called Timer Elapsed. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{timer_8h_aa200ac08feffa4ebd4445ebd838263fd}{setup\+Timer}} (unsigned long n\+Sec)
@@ -31,12 +31,7 @@ int \mbox{\hyperlink{timer_8h_a1a7e213b54eb0adb5b3db8d296426d97}{current\+Timeou
 \begin{DoxyCompactList}\small\item\em Current Interrupt Counter in Sec. \end{DoxyCompactList}\item 
 \mbox{\Hypertarget{timer_8h_ae565389ea28efe15a3ebee41f3ceae5a}\label{timer_8h_ae565389ea28efe15a3ebee41f3ceae5a}} 
 int \mbox{\hyperlink{timer_8h_ae565389ea28efe15a3ebee41f3ceae5a}{rx\+State}}
-\begin{DoxyCompactList}\small\item\em Receive from Serial States. \end{DoxyCompactList}\item 
-\mbox{\Hypertarget{timer_8h_a97904ae3388ebd6bb18b65a3a4b1f699}\label{timer_8h_a97904ae3388ebd6bb18b65a3a4b1f699}} 
-byte \mbox{\hyperlink{timer_8h_a97904ae3388ebd6bb18b65a3a4b1f699}{Err}}
-\begin{DoxyCompactList}\small\item\em Error Indicating for AT Command Respnse. \end{DoxyCompactList}\item 
-int \mbox{\hyperlink{timer_8h_ab04e2d55ea4a544f3575812582af7b51}{current}}
-\begin{DoxyCompactList}\small\item\em Current rx\+State for Serial. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Receive from Serial States. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
@@ -75,9 +70,11 @@ Definition at line 49 of file timer.\+h.
 
 
 
-I\+SR functions called for Reset E\+S\+P32. 
+Error Indicating for AT Command Respnse. 
 
-\begin{DoxyReturn}{Returns}
+Current rx\+State for Serial
+
+I\+SR functions called for Reset E\+S\+P32 \begin{DoxyReturn}{Returns}
 void 
 \end{DoxyReturn}
 
@@ -100,21 +97,4 @@ void
 
 
 Definition at line 73 of file timer.\+h.
-
-
-
-\subsection{Variable Documentation}
-\mbox{\Hypertarget{timer_8h_ab04e2d55ea4a544f3575812582af7b51}\label{timer_8h_ab04e2d55ea4a544f3575812582af7b51}} 
-\index{timer.h@{timer.h}!current@{current}}
-\index{current@{current}!timer.h@{timer.h}}
-\subsubsection{\texorpdfstring{current}{current}}
-{\footnotesize\ttfamily int current}
-
-
-
-Current rx\+State for Serial. 
-
-Current rx\+State for Serial. 
-
-Definition at line 285 of file main.\+h.
 
